9月30日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -146,23 +146,50 @@ private static readonly int ProductCDLength = (Attribute.GetCustomAttribute(type
 ## 名前付き引数 C#7.0
 
 
+## 
+
+``` SQL
+
+SELECT TOP 1
+CONVERT(BIT,COUNT([TMa_ProductJan].[JanCD])),
+CAST (COUNT([TMa_ProductJan].[JanCD]) AS BIT)
+FROM [TMa_ProductJan]
+WHERE [OfficeCD] = 'ALP'
+AND   [JanCD] = '4908055539499'
+
+```
+
 
 
 ・背中も筋肉痛にならなくなってきたので、筋トレレギュラーに加えてもいいかも。
 ・今日は少しおかしい。いろいろ忘れるし頭が働かない。
+・昨日やった複合キーの話がもう出た。勉強の成果が分かるっていいね。
 
 ・英語ee
 ・80 70
 ・JavaEnum
-・帰ったらセキュリティをすべて終わらせて、残った時間で昨日の復習。多分それだけで終わる。
-・定期便は本当にあの値段なのかあやしいので、最後の最後まで油断しないこと。
-・昨日やった複合キーの話がもう出た。勉強の成果が分かるっていいね。
-
+〆・帰ったらセキュリティをすべて終わらせて、残った時間で昨日の復習。多分それだけで終わる。
+〆・定期便は本当にあの値段なのかあやしいので、最後の最後まで油断しないこと。
 〆・昼休みはSUBSTRINGのまとめでもしようかね。
 〆・よく使うファイルはOtherではなく、上に出す。
 〆・よくよくみるといらないの混じってるので、整理して除外する
 〆・きのうの日記を埋める
 〆・明日は遅番で来ることの交渉をする
 →OK
+〆・AKIRA FLASHBACK MADみたい
 ・ワクチンの予約
-・AKIRA FLASHBACK MADみたい
+
+
+
+・キーボード取引完了
+・問題集売れた。売れやがった・・・。まぁ、賞味期限切れて売れないよりはましだよな。
+効率は悪いが、楽天ポイントの現金化ってやつだな。
+・写真撮影はデスクライトとスタンディングデスクを使えば、いつでも安定して可能であることを発見した。これで時間を気にせずいつでも実行できる。
+
+・買い物と重要な部分の撮影は完了。
+・8時に起きるだけで体調がいい。
+・車のエンジンが付くって素晴らしい。
+・昼休みは今朝撮影したやつを見る。
+・クロック周波数の問題を攻略する。
+
+<https://www.foresight.jp/blog/it/archives/964>
