--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -65,6 +65,12 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 
 商品代金が入金された時に行う消込を「入金消込」といい、反対に代金を支払った時に行う消込は「支払い消込」という。  
 
+簿記では売掛金を資産として、単純に現金に換える処理しかしなかったわけだが、あれって実務ではものすごい数があるわけで、  
+どの売掛金が何に対しての売り上げに当たるのか確認する作業も必要になってくるのだろう。  
+その作業が消込ってわけだ。  
+何と何がなんのペアなのか、当てはめては消していくから消込。  
+[消し込みとは？その課題と対策について解説！](https://www.robotpayment.co.jp/blog/billing-business/reconcile/9235/)  
+
 ■ d 不正解  
 充当の完了していないレコード群を買上げ年月日の古い順に整列させておく必要があります。  
 年月日のデータでは、日付が古いほど値が小さくなるので、古い順にするには買上げ年月の昇順(値の小さい順)で整列させることになります。  
