10月1日出社前

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,39 +1,6 @@
 # 後でまとめたいやつら
 
 
-## mariaDBで0埋めして文字列結合するサンプル
-
-意外と調べるのに苦労したのでまとめる。  
-GORAPriceに20とか30レコードもあるようなプランがあるか調べたかったので、  
-IDを作る要領で3つのキーを0埋めして文字列結合して、GroupByしてCOUNT取ってHAVINGで20以上のIDを表示ってやつ。  
-
-左0埋め→LPAD  
-文字列結合→CONCAT  
-数値→文字列変換→CAST(数値 AS CHAR)  
-数値文字列変換に関してはLPADしてCONCATしたらそのまま行けたので別に必要ないのかも。  
-
-``` SQL
-SELECT
-    CONCAT(LPAD(GolfCode, 4, '0'),LPAD(PlanCode, 6, '0'),LPAD(OpenPlanCode, 6, '0')),
-    COUNT(CONCAT(LPAD(GolfCode, 4, '0'),LPAD(PlanCode, 6, '0'),LPAD(OpenPlanCode, 6, '0')))
-FROM
-    TmOpenPlanGORAPrice
-GROUP BY
-    CONCAT(LPAD(GolfCode, 4, '0'),LPAD(PlanCode , 6, '0'),LPAD(OpenPlanCode, 6, '0'))
-HAVING
-    COUNT(CONCAT(LPAD(GolfCode, 4, '0'),LPAD(PlanCode, 6, '0'),LPAD(OpenPlanCode, 6, '0'))) > 30
-```
-
-
-## JavaScriptもしくはTypeScriptにstring.IsNullOrEmptyに相当する関数は存在するか？
-
-結論から言うとない。  
-けど、言語使用上、必要ないみたい。  
-そんなものを使わなくても !stringで全部わかるんだとか。  
-
-<https://codereview.stackexchange.com/questions/5572/string-isnullorempty-in-javascript>  
-
-
 ## nginx
 
 nginx再起動コマンド : sudo nginx -s reload
@@ -141,7 +108,7 @@ NULL -1 = NULL
 ## Laravel 405
 
 最後にスラッシュを入れるとリダイレクトになるらしいが、なぜ？
-開発環境ではならないのに、61ではなるのはなぜ？
+開発環境ではならないのに、61や本番で発生したのはなぜ？
 WEBサーバーの違いに寄るものなのか？
 
 ## クロックの計算
@@ -152,13 +119,51 @@ WEBサーバーの違いに寄るものなのか？
 書けるのか割るのかその基準があいまいだから。  
 
 1GHz = 10^9 = 10億  
-というわけで、1秒間に10億回のクロックが発生する。もとい10億回計算出来る。  
-1命令が1クロックならMIPSは1,000MIPS  
-1M = 10^6 = 100万  
+1秒間に10億回のクロックが発生する。  
 
-1命令が0.8クロックなら何万命令実行できる？  
+まずこれが基準。10億です。  
+クロックが発生するという事は10億回計算出来る。  
 
-10億を0.8で割ると？
-125000000000
+・1命令が1クロックで実行可能な場合  
+→10億命令実行可能ということ。  
+この時MIPSは1,000になる。  
+1MIPSは10^6,100万命令なので、10^9/10^6 = 10^3で1000MIPS。  
 
+・1命令が0.8クロックで実行可能な場合  
+→  
+0.2分、余分に実行可能なので性能は上がっているわけだ。  
+基本的に10億を0.8で割ればいい。掛けると逆に性能下がるのでダメね。  
+すると12.5億になる。12.5億命令実行可能。  
+単位を合わせればいいというわけ。  
 
+1クロック何秒かも覚えておくか。  
+1/10^9すればいいので1ナノ秒(10^-9)  
+
+ミリ (milli)    ,10−3,0.001  
+マイクロ (micro),10−6,0.000 001  
+ナノ (nano)     ,10−9,0.000 000 001  
+10^9は1の後ろに0が9個ついている。  
+10^-9は1の前に整数部分も含めて0が9個ついている。  
+
+問 2GHzのプロセッサにおいて、一つの命令が5クロックで実行できるとき、1命令の実行に必要な時間は何ナノ秒か？  
+
+1クロックにかかる時間は
+「1秒÷2,000,000,000クロック＝0.0000000005秒／クロック」0.5ナノ秒
+
+1命令に5クロックかかるるのですから、  
+1命令に必要なクロック数は＝0. 000 000 000 5秒／クロック×5クロック＝0.000 000 002 5秒  
+2.5ナノ秒  
+
+---
+
+・8時に自然に目が覚めた。やっぱり7時は無謀だったな。
+　許可なく遅番にしたけど、まぁこまけぇこたぁいいだろう。
+・100円クーポンが出たので帰りに買い物しましょう。
+・出社前に物を出品しますよ。
+・玄米と薬が足りなくなりそう。
+・定期便が来るのは10月4日らしいが、どうせ1日位早まるだろう。
+　受け取るために車を使っても別に問題はない。時間節約のためならなんでもする。
+・20日にワクチンの予約を取ったので、21日に有給申請しましょう。
+・今日で28のどちらかを終わらせたい。
+
+今の地点でSI単位系をやってるのやばいと思う。
