10月1日会社分

--- a/C#/非同期系メモ.md
+++ b/C#/非同期系メモ.md
@@ -149,11 +149,36 @@ async,awaitなどでスレッドを分けた場合、他のスレッドで動作
 そういう場合に、そのコントロールを操作する仕組みがDispatcherっぽい。  
 Dispatcherはキューを管理するクラス。  
 操作したいコントロールを所有しているスレッドのキュー管理に対して、指定したデリゲートの実行をお願いするイメージ。  
-→
 とりあえず、並列処理とかasync,awaitとかの時に使えばいいみたいね。  
 
-<https://redwarrior.hateblo.jp/entry/2021/03/29/090000>  
+[Dispatcher.InvokeとDispatcher.BeginInvoke、Dispatcher.InvokeAsyncの違い](https://redwarrior.hateblo.jp/entry/2021/03/29/090000)  
 この記事も面白い。  
+
+[await/async等の別スレッドからコントロールのプロパティを変更する](https://todosoft.net/blog/?p=363)  
+改めて見てみたけど、非同期中に他のコントロールのプロパティ変更したりするときに使う命令みたいね。  
+
+``` C#
+/*
+await/async等の別スレッドからコントロールのプロパティを変更しようとすると、
+コントロールの描画を行っているスレッドと異なる為、エラーとなる。
+InvokeRequired で異なるスレッドからの呼び出しかを判定し、異なる場合は Invoke で再呼び出しをすることで解決する。
+*/
+private async void button1_Click(object sender, EventArgs e)
+{
+    await Task.Run(() =>
+    {
+        Invoke((MethodInvoker)(() =>
+        {
+            // 非同期中に他のコントロールのプロパティを変更する
+            button1.Text = "OK";
+        }));
+    });
+}
+// WPFのVMでは上記Invokeが使用できない為、下記のようになる
+System.Windows.Application.Current.Dispatcher.Invoke((Action)(() => {
+    // 同期処理
+}));
+```
 
 ---
 
