--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -92,14 +92,8 @@ PHP Warning:  foreach() argument must be of type array|object, null given in /wo
 ・プライベートとグローバルを覚えたい。
 ・英語ee
 ・80 70
-・JavaEnum
-・405,Laravel
 ・エラーコードを覚える。
 
-
-・明日の朝にワクチン予約してみる
-〆・重要な部分の撮影
-〆・買い物
 
 ---
 
@@ -127,3 +121,6 @@ Venderだけをダウンロートする事はできるのだろうか。
 ここから先も調べないといけないが、とりあえずは完了とする。  
 
 〆・主キー制約とUNIQUEキー制約についてまとめる
+〆・JavaEnum
+〆・クロック計算
+〆・405,Laravel
