--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,67 +1,6 @@
 # 後でまとめたいやつら
 
 
-## nginx
-
-nginx再起動コマンド : sudo nginx -s reload
-→
-通常、Webサーバーの再起動を行った場合、瞬断が発生するが、-sオプションをつけることでそれがなくなるらしい。
--sオプションを指定すると、nginxのworkerプロセスが少しずつ新しいプロセスに置き換わっていくだとかなんだとか。
-[[nginx]設定の反映](https://qiita.com/WisteriaWave/items/fa2e7f4442aee497fe46)
-
-
-伊藤の開発ポートの設定ファイル
-/etc/nginx/conf.d/2061.conf : bugfix
-/etc/nginx/conf.d/2062.conf : hotfix
-
-fastcgi_intercept_errors on;
-をlocation ~ \.php$ {}の中に記述すると300以上のエラーがクライアントに伝わらなくなるので、正常にエラー表示ができなくなる。
-2062ファイルにはこれが設定されていたので、hotfixでは意図的に500エラーを発生させても、bugfixのようなエラー表示にならなくて困っていた。
-原因はサーバーの設定であって、Laravelの機能ではなかった。
-[cakephp3 + CentOS8 + nginx + php-fpmでエラー表示がされないとき](https://blog.supersonico.info/archives/4277/)
-
-
-[nginx 起動ポートの変更](https://qiita.com/Watercat3/items/38b2bac5fa70b232bee3)
-
-
-## APIのメッセージを表示する方法(Response型のメッセージを取得する方法)
-
-APIからのメッセージは_bodyプロパティの中にあるみたいが、素直にアクセスしようとすると存在しないというエラーになる。  
-実行したときは存在するけど、コーディングの段階では存在しないみたいなパターン。  
-これがJavascriptの仕様なのかTypescriptの仕様なのかは、わからないが、それはまた別でまとめたい。  
-取り出すときはres.json()でなぜか取り出せる。  
-そういうものなのだろうか。これも後でまとめる。  
-
-``` ts
-    // Service
-    public maintenance(param: any): Promise<Response> {
-        return this.apiService.put('system/web-cooperation/plan-cooperation/maintenance/', JSON.stringify(param));
-    }
-    
-    // ViewModel
-    this.goraMaintenanceService
-        .maintenance(param)
-        .then(
-            res => {
-                if (res.json() !== null && res.json() !== '') {
-                    this.confirmComponent.dialogOk(res.json(), '確認', null)
-                }
-                this.notify.success('メンテナンスしました。');
-                // 成功したら一覧を更新する
-                this.getPlanList();
-            },
-            error => this.notify.error('失敗しました。\n : ' + error.json());
-        )
-        .then(() => this.isLoading = false);
-```
-
-
-どうでもいいけどこの人すごい。
-1990年生まれ。京大卒。
-
-RESTとGraphQLについて
-<https://www.utakata.work/entry/2019/12/02/000000>
-
 
 ## DDLについて
 
@@ -103,13 +42,15 @@ NULL -1 = NULL
 
 ## 名前付き引数 C#7.0
 
+## XAMLでBoolを反転するには?
 
+[bool を反転して Binding したかっただけなんだ](https://usagi.hatenablog.jp/entry/2018/12/05/211311)  
 
-## Laravel 405
-
-最後にスラッシュを入れるとリダイレクトになるらしいが、なぜ？
-開発環境ではならないのに、61や本番で発生したのはなぜ？
-WEBサーバーの違いに寄るものなのか？
+``` XML
+<!-- なぜこれがデフォルトで出来ないのか -->
+<CheckBox IsChecked="{Binding Awabi}"/>
+<CheckBox IsEnabled="{Binding !Awabi}"/>
+```
 
 ## クロックの計算
 
@@ -129,7 +70,7 @@ WEBサーバーの違いに寄るものなのか？
 この時MIPSは1,000になる。  
 1MIPSは10^6,100万命令なので、10^9/10^6 = 10^3で1000MIPS。  
 
-・1命令が0.8クロックで実行可能な場合  
+問 1命令が0.8クロックで実行可能な場合、何万命令実行できる？
 →  
 0.2分、余分に実行可能なので性能は上がっているわけだ。  
 基本的に10億を0.8で割ればいい。掛けると逆に性能下がるのでダメね。  
@@ -139,9 +80,9 @@ WEBサーバーの違いに寄るものなのか？
 1クロック何秒かも覚えておくか。  
 1/10^9すればいいので1ナノ秒(10^-9)  
 
-ミリ (milli)    ,10−3,0.001  
-マイクロ (micro),10−6,0.000 001  
-ナノ (nano)     ,10−9,0.000 000 001  
+ミリ (milli)    , 10^−3, 0.001  
+マイクロ (micro), 10^−6, 0.000 001  
+ナノ (nano)     , 10^−9, 0.000 000 001  
 10^9は1の後ろに0が9個ついている。  
 10^-9は1の前に整数部分も含めて0が9個ついている。  
 
@@ -156,6 +97,8 @@ WEBサーバーの違いに寄るものなのか？
 
 ---
 
+## 雑記
+
 ・8時に自然に目が覚めた。やっぱり7時は無謀だったな。
 　許可なく遅番にしたけど、まぁこまけぇこたぁいいだろう。
 ・100円クーポンが出たので帰りに買い物しましょう。
@@ -166,4 +109,32 @@ WEBサーバーの違いに寄るものなのか？
 ・20日にワクチンの予約を取ったので、21日に有給申請しましょう。
 ・今日で28のどちらかを終わらせたい。
 
-今の地点でSI単位系をやってるのやばいと思う。
+・寝る前、時間がないのに歯の手入れやったけど、やっぱりひげ抜きでもそれなりにできることがわかった。
+・てか、起きてわかったけど、深夜の頭って考えてるようで何も考えてないわ。
+正常な判断ができないってのはああいう状態をいうんだなって思った。
+
+・宅急便コンパクトの書籍版があることを初めて知った。  
+700円からのサイズしか考えていなかったのでうれしい情報だ。
+・宅急便のまとめでも作ろうかね。今までの知見をまとめたい。
+→作った
+・自分が資格の取得を頑張るのは基本的な人権がほしいからかな。
+・お昼休みにたくさんまとめたりできたけど、まとめることが目的にならないように気を付けないといけない。
+
+
+
+・朝のうちにクロックの計算
+・出社前に問題集出荷完了
+・帰りに100円クーポン買い物(レタスとか買っておいたほうがいいかも？)
+
+
+わるかった
+・ワクチンといい、キーボードといい、定期便といい、いつもワンテンポ遅いよなぁ
+・今の地点でSI単位系をやってるのやばいと思う
+
+
+よかった
+・9時まで寝れたこと
+・宅急便コンパクトに書籍版のサイズがあることを知ったこと
+・ヤマトの人が丁寧で話しやすかった。
+・今日はたくさんまとめられたこと
+
