--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -74,6 +74,18 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 ■ d 不正解  
 充当の完了していないレコード群を買上げ年月日の古い順に整列させておく必要があります。  
 年月日のデータでは、日付が古いほど値が小さくなるので、古い順にするには買上げ年月の昇順(値の小さい順)で整列させることになります。  
+10/1  
+10/3  
+10/5  
+たしかに？
+
+■ e 不正解  
+■ f 不正解  
+こことはどちらもまとめてやる。  
+スレッドでもあるように、そもそも用語がわからない。  
+会計処理においてどういう事をするのか流れが理解できていないから、フローを見てもイメージ出来ない。  
+設計はこういうところがあるから怖い。  
+当たり外れがあるといえばある。なんでもそうかもしれないけどね。元年とかはめっちゃ簡単だったし。  
 
 ---
 
