--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -6,6 +6,121 @@
 
 [わかりそうデータ定義言語 (DDL)](https://wa3.i-3-i.info/word15639.html)
 
+データ定義言語 (DDL)（英：data definition language）とは
+
+データベースに対する命令の分類のひとつ
+
+であり
+
+データを入れておく箱に対して、あれやこれやをするときに使う命令のこと
+
+です。
+
+image piyo
+ 詳しく書くよ
+順番に見ていきましょう。
+まずは予備知識として「データベース」と「SQL」について簡単に説明します。
+「そんなの説明されなくても知ってるよ！」な人は、適当に読み飛ばしてください。
+
+データベースは「データを入れておく箱」です。
+突っ込んで考えると混乱するかもしれません。
+何となくのフィーリングで理解してください。
+
+データ定義言語
+
+SQLは「データベースとやり取りするときに使う言葉」です。
+
+データ定義言語2
+
+データベースにデータを入れるときは、データベースさんに対して「ちょっと、これを入れておいて」と命令します。
+反対にデータベースからデータを取り出すときは、データベースさんに対して「ちょっくら、こんなデータを取り出しておくれ」と命令します。
+SQLは、そんな命令をするときに使う言葉です。
+
+さて、このSQLを使った命令ですが、大きく分けて3つに分類できます。
+それは
+
+１．データをあれこれするときに使う命令
+２．データを入れておく箱をあれこれするときに使う命令
+３．データベースに対する権限周りをあれこれするときに使う命令
+
+の3つです。
+
+「１．データをあれこれするときに使う命令」はデータそのものに関する命令です。
+「この条件に一致するデータを探して」「このデータを入れておけ」「このデータのこの値をこっちの値に変えて」「このデータを削除して」のような命令をするときに使います。
+
+データ定義言語3
+
+「２．データを入れておく箱をあれこれするときに使う命令」はデータを入れておく箱に関する命令です。
+「このデータが入る箱を作って」「この箱をもっと大きくして」「この箱は使わないから捨てちゃって」のような命令をするときに使います。
+
+データ定義言語4
+
+「３．データベースに対する権限周りをあれこれするときに使う命令」は使ってイイ人やダメな人を指定するときに使う命令です。
+「ピヨ子さんには、この箱の中身は見せないで」「ピヨ太ママには見せていいけど、変更はさせないで」のよう命令をするときに使います。
+
+データ定義言語5
+
+以上を踏まえて、この3種類の命令のうち
+
+２．データを入れておく箱をあれこれするときに使う命令
+
+が「データ定義言語（データテイギゲンゴ）」です。
+「DDL（ディーディーエル）」と表現される場合もあります。
+
+データ定義言語6
+
+「DDL」と表現された場合は「Data Definition Language（データ・デフィニション・ランゲージ）」の略です。
+気が向いたら覚えてあげてください。
+
+データ定義言語7
+
+※「Data Definition Language」を何となく日本語にすると「データ定義言語」となります。詳細が気になる方はIT略語一覧の「DDL」をご覧ください。
+
+
+SQLで言えば
+
+・create文
+・drop文
+・alter文
+
+などがデータ定義言語に相当します。
+
+データベースに命令するときに使う言語はSQLだけではありません。
+他にもあります……多分。
+よって「データ定義言語」という用語はSQL専用ではありません。
+データを入れておく箱をあれこれするときに使う命令（で使う言語）は、すべてデータ定義言語です。
+
+とはいえ、2021年現在の状況では、データベースをあれこれする際にはSQLを使うことが多いでしょう。
+「データ定義言語はcreate文とかdrop文とかのこと」と解釈しても、そこまで困ることはないと思います。
+
+ちなみに
+
+１．データをあれこれするときに使う命令
+
+は「データ操作言語（DML）」と言います。
+
+データ定義言語8
+
+あと
+
+３．データベースに対する権限周りをあれこれするときに使う命令
+
+は「データ制御言語（DCL）」と言います。
+
+データ定義言語9
+
+気が向いたら、全部まとめて覚えてあげてください。
+
+・データ操作言語（DML）：データをあれこれ
+・データ定義言語（DDL）：箱をあれこれ
+・データ制御言語（DCL）：権限をあれこれ
+
+です。
+
+image piyo2
+ 一言でまとめるよ
+まぁ「データ定義言語」って単語が出てきたら「データベースに対する『データを入れておく箱をあれこれしなさい』な命令なんだな～」と、お考えください。
+
 
 ## NULLのLIKE検索
 
@@ -98,43 +213,4 @@ NULL -1 = NULL
 ---
 
 ## 雑記
-
-・8時に自然に目が覚めた。やっぱり7時は無謀だったな。
-　許可なく遅番にしたけど、まぁこまけぇこたぁいいだろう。
-・100円クーポンが出たので帰りに買い物しましょう。
-・出社前に物を出品しますよ。
-・玄米と薬が足りなくなりそう。
-・定期便が来るのは10月4日らしいが、どうせ1日位早まるだろう。
-　受け取るために車を使っても別に問題はない。時間節約のためならなんでもする。
-・20日にワクチンの予約を取ったので、21日に有給申請しましょう。
-・今日で28のどちらかを終わらせたい。
-
-・寝る前、時間がないのに歯の手入れやったけど、やっぱりひげ抜きでもそれなりにできることがわかった。
-・てか、起きてわかったけど、深夜の頭って考えてるようで何も考えてないわ。
-正常な判断ができないってのはああいう状態をいうんだなって思った。
-
-・宅急便コンパクトの書籍版があることを初めて知った。  
-700円からのサイズしか考えていなかったのでうれしい情報だ。
-・宅急便のまとめでも作ろうかね。今までの知見をまとめたい。
-→作った
-・自分が資格の取得を頑張るのは基本的な人権がほしいからかな。
-・お昼休みにたくさんまとめたりできたけど、まとめることが目的にならないように気を付けないといけない。
-
-
-
-・朝のうちにクロックの計算
-・出社前に問題集出荷完了
-・帰りに100円クーポン買い物(レタスとか買っておいたほうがいいかも？)
-
-
-わるかった
-・ワクチンといい、キーボードといい、定期便といい、いつもワンテンポ遅いよなぁ
-・今の地点でSI単位系をやってるのやばいと思う
-
-
-よかった
-・9時まで寝れたこと
-・宅急便コンパクトに書籍版のサイズがあることを知ったこと
-・ヤマトの人が丁寧で話しやすかった。
-・今日はたくさんまとめられたこと
 
