--- a/BasicInformation/午後/平成28年春期.md
+++ b/BasicInformation/午後/平成28年春期.md
@@ -36,9 +36,21 @@
 
 ## データベース
 
+11分 【成績】全5問中 5問 回答/5問 正解　正解率:100.0%  
+
+うん。データベースは安定してきた。  
+COUNT(*)の意味も復習した後なので問題ない。  
+
 ---
 
 ## ソフトウェア設計
+
+21分 【成績】全7問中 7問 回答/6問 正解　正解率:85.7%  
+
+秋は難しかったのに春は簡単だ。  
+1問間違えたが、問題があいまい過ぎて深読みしすぎて間違えた。  
+最初に選んでいたのが合っていたパターンだ。  
+特にまとめることがない。  
 
 ---
 
