--- a/BasicInformation/午後/平成29年秋期.md
+++ b/BasicInformation/午後/平成29年秋期.md
@@ -58,7 +58,7 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 でも、解説を見てみると、どれもいい線は行っていたので、まぁ惜しかったかなって感じ。  
 そもそも消込処理って何ぞやってところも勉強したい。  
 
-**消込(消込)**  
+**消込**  
 消込とは、売掛金や買掛金など債権・債務の勘定科目の残高を消していく作業を指す。  
 例えば、売掛金の入金があった場合、支払い明細と照らし合わせながら入金されているデータを消していくことで、  
 売掛金が請求通りに回収できているか、残りの売掛金がデータ上と実際の入金でずれていないか、回収の遅れが出ていないかを把握することができる。  
@@ -70,6 +70,43 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 その作業が消込ってわけだ。  
 何と何がなんのペアなのか、当てはめては消していくから消込。  
 [消し込みとは？その課題と対策について解説！](https://www.robotpayment.co.jp/blog/billing-business/reconcile/9235/)  
+
+**充当**  
+その事の用に当てること。  
+払戻し額をご利用代金の一部にあて、一部お支払い済みとしてご請求額から差し引きをすること  
+今回の例であれば、買い上げ商品に対する入金を当てる事をいう。  
+消込はこれ全てに対する作業の事。  
+
+``` txt
+IT初心者のfredです。
+
+1．この問題で、まず各用語の定義がわかりません。
+○買上げ：得意先が買うことが買上げ？入金しなくても買上げ成立？
+○消込：買上げした商品に入金をあてること？各買上げごとには行わない？月末処理のみ？
+○充当：消込との違いは？買上げ毎に行う？
+
+2．１回の買上げ／入金でどのような会計処理理になるのですか。
+○買上げ額＝入金額（普通の処理）：充当？常に行う。
+○買上げ額＞入金額：充当して、残りは買上げ額残？
+○「充当が完了していない月間買上げ額に対して、----入金を充当処理---」とありますが、上記の買上げ残を入金残に当てるの意味か？
+
+→  
+
+>買上げ：得意先が買うことが買上げ？入金しなくても買上げ成立？
+これはその認識でよいと思います。入金がなくても買い上げ（売買）は成立しますし，
+問題文にあるように買い上げをしないうちに入金をしておくこともできます。
+イメージがわきにくければ，厳密に同じではないと思いますが，
+「通販で注文したあとまとめて支払いをする」とか「電子マネーをチャージして
+おいてから後で物を買う」というのを想像するといいかもしれません。
+
+>消込：買上げした商品に入金をあてること？各買上げごとには行わない？月末処理のみ？
+これもだいたいそうですね。問題文によると，消込は「毎月の最終営業日の取引終了後」の
+「月次集計処理」において「月間買上げ額確定処理の終了後に」行うとされています。
+
+>充当：消込との違いは？買上げ毎に行う？
+「充当」はまさに「買上げした商品に入金をあてること」ですが，一つ一つの買い上げに順に
+入金を「あてる」処理をまとめて（集計処理の時に）行うことを消込と呼んでいる，
+```
 
 ■ d 不正解  
 充当の完了していないレコード群を買上げ年月日の古い順に整列させておく必要があります。  
@@ -86,6 +123,106 @@ GROUP BY して SUMして10000円以上。 COUNTして5個以上。
 会計処理においてどういう事をするのか流れが理解できていないから、フローを見てもイメージ出来ない。  
 設計はこういうところがあるから怖い。  
 当たり外れがあるといえばある。なんでもそうかもしれないけどね。元年とかはめっちゃ簡単だったし。  
+
+``` txt
+設問2図2の流れ図で
+ひし形(変数1>変数2)Yes、No矢印先の四角部分の処理について
+具体的にどんなことをしているかかみ砕いて教えていただけないでしょうか？
+出来れば具体的な金額等の例をまじえて教えていただけるとありがたいです。
+
+
+長くなるので、何回かに分けて書きます。
+
+ある得意先XXXが2021/3,2021/4にそれぞれ100円,200円を買い上げ、
+それに対する入金が2021/5/1,2021/5/2,2021/5/3にそれぞれ40円,110円,160円
+あり、2021/5/5に消込処理を行った場合を考えてみます。
+
+月間買上げ、入金は消込前は以下の状態です
+消込はレコードなしの状態です。
+
+月間買上げ
+(001,XXX,2021/03,100,0)
+(002,XXX,2021/04,200,0)
+
+入金
+(0001,XXX, 40,2021/05/01,0)
+(0002,XXX,110,2021/05/02,0)
+(0003,XXX,160,2021/05/03,0)
+
+・１回目の判定
+  変数１は[入金0001].入金額－[入金0001].充当額であり、40-0で40
+  変数２は[月間買上げ001].月間買上げ額－[月間買上げ001].消込額であり、100-0で100
+  変数１ < 変数２ であり、Noの方に進みます。
+
+  Noの次の箱の中では
+  ・[月間買上げ001].消込額に0+40で40が代入され、
+    月間買上げ001の消込額が更新されて、(001,XXX,2021/03,100,40)となります。
+  ・[入金0001].充当額に40が代入され、
+    入金0001の充当額が更新されて、(0001,XXX, 40,2021/05/01,40)となります。
+  ・消込(0001,001,40,2021/5/5)のレコードが作成されます。
+
+・２回目の判定
+  変数１は[入金0002].入金額－[入金0002].充当額であり、110-0で110
+  変数２は[月間買上げ001].月間買上げ額－[月間買上げ001].消込額であり、100-40で60
+  変数１ > 変数２ であり、Yesの方に進みます。
+
+  Yesの次の箱の中では
+  ・[月間買上げ001].消込額に100が代入され、
+    月間買上げ001の消込額が更新されて、(001,XXX,2021/03,100,100)となります。
+  ・[入金0002].充当額に0+60が代入され、
+    入金0002の充当額が更新されて、(0002,XXX,110,2021/05/02,60)となります。
+  ・消込(0002,001,60,2021/5/5)のレコードが作成されます。
+
+・３回目の判定
+  変数１は[入金0002].入金額－[入金0002].充当額であり、110-60で50
+  変数２は[月間買上げ002].月間買上げ額－[月間買上げ002].消込額であり、200-0で200
+  変数１ < 変数２ であり、Noの方に進みます。
+
+  Noの次の箱の中では
+  ・[月間買上げ002].消込額に0+50で50が代入され、
+    月間買上げ002の消込額が更新されて、(002,XXX,2021/04,200,50)となります。
+  ・[入金0002].充当額に110が代入され、
+    入金0002の充当額が更新されて、(0002,XXX,110,2021/05/02,110)となります。
+  ・消込(0002,002,50,2021/5/5)のレコードが作成されます。
+
+・４回目の判定
+  変数１は[入金0003].入金額－[入金0003].充当額であり、160-0で160
+  変数２は[月間買上げ002].月間買上げ額－[月間買上げ002].消込額であり、200-50で150
+  変数１ > 変数２ であり、Yesの方に進みます。
+
+ Yesの次の箱の中では
+  ・[月間買上げ002].消込額に200が代入され、
+    月間買上げ002の消込額が更新されて、(002,XXX,2021/04,200,200)となります。
+  ・[入金0003].充当額に0+150が代入され、
+    入金0003の充当額が更新されて、(0003,XXX,160,2021/05/03,150)となります。
+  ・消込(0003,002,150,2021/5/5)のレコードが作成されます。
+
+以上で消込処理が終了し、
+月間買上げ、入金、消込は以下の状態になります。
+
+月間買上げ
+(001,XXX,2021/03,100,100)
+(002,XXX,2021/04,200,200)
+
+入金
+(0001,XXX, 40,2021/05/01, 40)
+(0002,XXX,110,2021/05/02,110)
+(0003,XXX,160,2021/05/03,150)
+
+消込
+(0001,001, 40,2021/5/5)
+(0002,001, 60,2021/5/5)
+(0002,002, 50,2021/5/5)
+(0003,002,150,2021/5/5)
+2021.05.05 14:31
+```
+
+なるほど。うまい事出来てるもんだ。  
+最後のテーブルの状態を見れば何やりたいかはわかる。  
+確かに、ループして金額を差し引いては充当に当てたり、消込のレコードを作ったりするわけだな。  
+しかし、前提知識が必要に思う。  
+それをイメージするのもこの問題の趣旨なのだろうけど、会計処理に関わったことがない人間からしたらイメージすることすら大変な気がする。  
+ある程度納得いったのでこれはいいとしよう。  
 
 ---
 
