--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -1,14 +1,5 @@
 # 雑学
 
-・しんぼう-えんりょ【深謀遠慮】
-深く考えを巡らし、のちのちの遠い先のことまで見通した周到綿密な計画を立てること。
-
-
-・しき-そくぜ-くう【色即是空】
-現世に存在するあらゆる事物や現象はすべて実体ではなく、空無であるということ。
-▽仏教語。「色」はこの世のすべての事物や現象。「空」は固定的な実体がなく空無であること。
-
-
 ●大塚 周夫 : おおつか ちかお
 これでちかおって読むのかよ。初めて知ったは。
 
@@ -47,7 +38,7 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 
 ---
 
-## ランキング系
+## 運合系
 
 ### ミッドフット
 
@@ -63,6 +54,16 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 ①姿勢をよくする。  
 ②倒れこむように。  
 ③着地は自分の体重を拾っていく。接地は短くする。真下に踏むようにする。  
+
+### 散歩とウォーキングの違い
+
+ウォーキングは歩き方が違う。  
+姿勢を正して、歩幅を大きめにとり、脚を前に出すときに膝をしっかりと延ばす。  
+早歩きで軽く汗ばむ程度の運動を指す。  
+
+散歩はそんな事は全くなく、適当に歩くだけ。  
+
+目的としては散歩が気分転換。ウォーキングが運動や健康維持といったところか。  
 
 ---
 
