--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -44,15 +44,19 @@ https://elf-mission.net/programming/wpf/mvvm-labo/phase05/
 ・時間があるときに、予約入力からチェックアウトまで流して、データがどうなるか観察してみればいい。
 人に頼らず、自分で学ぶとはそういうことだぞ。
 
-・php foreachのエラーのあれ
-Warning: Invalid argument supplied for foreach() とでたら。。。
-invalid argument supplied for foreach()
-PHP Warning:  foreach() argument must be of type array|object, null given in /workspace/Main.php on line 4
 
-<https://nasunoblog.blogspot.com/2013/10/sql-server-column-edit-error.html>
 
 ・abstractを実装したクラスの動きとは？参照はどうなる？
 
+
+
+1時間で標準入力からじゃんけんプログラムを作れ。
+30分でfizzbuzz問題を作れ。
+オブジェクト指向とは何かを初心者でもわかるように説明しなさい。
+DIとはなにか？
+ORマッパーとはなにか？
+知っているデザインパターンを教えてください。
+5年後の姿を教えてください。
 
 
 ・配列の入れ子はやっぱりきついかも。
@@ -92,7 +96,9 @@ PHP Warning:  foreach() argument must be of type array|object, null given in /wo
 ・プライベートとグローバルを覚えたい。
 ・英語ee
 ・80 70
-・エラーコードを覚える。
+
+思えば、PHP,JavaScript,TypeScriptの文法がわからない。
+基本的なところを改めてまとめたい。  
 
 
 ---
@@ -124,3 +130,7 @@ Venderだけをダウンロートする事はできるのだろうか。
 〆・JavaEnum
 〆・クロック計算
 〆・405,Laravel
+〆・php foreachのあれ
+〆・エラーコードを覚える。
+→とりあえず、何かある度にまとめていく。
+直近の405はまとめたのでokにする。
