--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,6 +1,56 @@
 # 後でまとめたいやつら
 
+## 予約枠のいつぞやのやつ
 
+バインドがあいまいだった時の話で、もはやこれだけあっても意味がない気がする。  
+
+``` XML
+<ControlTemplate.Triggers>
+    <!--<DataTrigger Binding="{Binding Text, ElementName=DayOfWeek}" Value="土">
+        <Setter Property="Foreground" Value="blue" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding Text, ElementName=DayOfWeek}" Value="日">
+        <Setter Property="Foreground" Value="red" />
+    </DataTrigger>-->
+    <DataTrigger Binding="{Binding DayOfWeek}" Value="Saturday">
+        <Setter TargetName="DayOfWeek" Property="Foreground" Value="blue" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding DayOfWeek}" Value="Sunday">
+        <Setter TargetName="DayOfWeek" Property="Foreground" Value="red" />
+    </DataTrigger>
+</ControlTemplate.Triggers>
+
+<ControlTemplate.Triggers>
+    <!--<DataTrigger Binding="{Binding Empty}" Value="True">
+        <Setter Property="Visibility" Value="Hidden" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding Text, ElementName=Day}" Value="土">
+        <Setter Property="Foreground" Value="blue" />
+        <Setter TargetName="Border" Property="BorderThickness" Value="1,0,1,1" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding Text, ElementName=Day}" Value="日">
+        <Setter Property="Foreground" Value="red" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding IsSelected}" Value="True">
+        <Setter TargetName="Base" Property="Background" Value="{StaticResource MahApps.Brushes.Accent4}" />
+    </DataTrigger>-->
+    <DataTrigger Binding="{Binding Empty}" Value="True">
+        <Setter TargetName="Count" Property="Visibility" Value="Hidden" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding DayOfWeek}" Value="Saturday">
+        <Setter TargetName="Day" Property="Foreground" Value="blue" />
+        <Setter TargetName="Border" Property="BorderThickness" Value="1,0,1,1" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding DayOfWeek}" Value="Sunday">
+        <Setter TargetName="Day" Property="Foreground" Value="red" />
+    </DataTrigger>
+    <DataTrigger Binding="{Binding IsSelected}" Value="True">
+        <Setter TargetName="Base" Property="Background" Value="{StaticResource MahApps.Brushes.Accent4}" />
+    </DataTrigger>
+</ControlTemplate.Triggers>
+```
+
+---
 
 ## DDLについて
 
@@ -157,60 +207,23 @@ NULL -1 = NULL
 
 ## 名前付き引数 C#7.0
 
-## XAMLでBoolを反転するには?
-
-[bool を反転して Binding したかっただけなんだ](https://usagi.hatenablog.jp/entry/2018/12/05/211311)  
-
-``` XML
-<!-- なぜこれがデフォルトで出来ないのか -->
-<CheckBox IsChecked="{Binding Awabi}"/>
-<CheckBox IsEnabled="{Binding !Awabi}"/>
-```
-
-## クロックの計算
-
-<https://www.foresight.jp/blog/it/archives/964>  
-
-計算は苦手。  
-書けるのか割るのかその基準があいまいだから。  
-
-1GHz = 10^9 = 10億  
-1秒間に10億回のクロックが発生する。  
-
-まずこれが基準。10億です。  
-クロックが発生するという事は10億回計算出来る。  
-
-・1命令が1クロックで実行可能な場合  
-→10億命令実行可能ということ。  
-この時MIPSは1,000になる。  
-1MIPSは10^6,100万命令なので、10^9/10^6 = 10^3で1000MIPS。  
-
-問 1命令が0.8クロックで実行可能な場合、何万命令実行できる？
-→  
-0.2分、余分に実行可能なので性能は上がっているわけだ。  
-基本的に10億を0.8で割ればいい。掛けると逆に性能下がるのでダメね。  
-すると12.5億になる。12.5億命令実行可能。  
-単位を合わせればいいというわけ。  
-
-1クロック何秒かも覚えておくか。  
-1/10^9すればいいので1ナノ秒(10^-9)  
-
-ミリ (milli)    , 10^−3, 0.001  
-マイクロ (micro), 10^−6, 0.000 001  
-ナノ (nano)     , 10^−9, 0.000 000 001  
-10^9は1の後ろに0が9個ついている。  
-10^-9は1の前に整数部分も含めて0が9個ついている。  
-
-問 2GHzのプロセッサにおいて、一つの命令が5クロックで実行できるとき、1命令の実行に必要な時間は何ナノ秒か？  
-
-1クロックにかかる時間は
-「1秒÷2,000,000,000クロック＝0.0000000005秒／クロック」0.5ナノ秒
-
-1命令に5クロックかかるるのですから、  
-1命令に必要なクロック数は＝0. 000 000 000 5秒／クロック×5クロック＝0.000 000 002 5秒  
-2.5ナノ秒  
-
 ---
 
 ## 雑記
+
+・午前問題を進める
+
+
+素ってペットボトルに入れられるのかな。
+→リンゴ酢程度なら問題ない。黒酢とか強いやつはちょっと考えたほうがいいっぽい。
+
+
+午前問題の敷居を下げる。
+考えなくていい。
+答えを見てスクリーンショット取るだけでいい。
+わからなかったらすぐ答えてスクリーンショット取る。
+それくらい敷居を下げる。
+ポンポンやっていく。
+200問は確実に押さえないといけないから。
+もう覚える方向でいく。
 
