--- a/BasicInformation/午後/平成28年秋期.md
+++ b/BasicInformation/午後/平成28年秋期.md
@@ -37,9 +37,93 @@
 
 ## データベース
 
+10分 【成績】全7問中 7問 回答/7問 正解　正解率:100.0%  
+
+簡単だった。  
+特にまとめる必要はない。  
+
 ---
 
 ## ソフトウェア設計
+
+24分 【成績】全5問中 5問 回答/3問 正解　正解率:60.0%  
+
+多重度の問題が苦手です。  
+しっかり復習しましょう。  
+あと、この問題に関しては先に問題から入ってみました。  
+というのも、目的もわからないのに、グダグダとシステムの概要を説明されても頭に入ってこないからですね。  
+それはそれでうまく言ったので、この先も少し実験していきたいなと思いました。  
+
+■ b 不正解  
+みんな大好き多重度。  
+会社と社員の関係くらいだったらわかるけどそっから先になると途端にわからなくなる。  
+ついてもついてなくてもいいじゃんって思う。  
+
+大事なのは貸出明細から見たレンタル商品の多重度とレンタル商品から見た貸出明細の多重度の意味。  
+1なのか0以上なのかってことがわかったとして、それが何を表すのか、どうやってそれを導き出すのか。  
+そこが重要だ。  
+まぁ、でもこれってDBのあれと同じだよな。  
+
+**多重度(Multiplicity)**  
+「クラスのインスタンス間に何本のリンクが存在し得るか」の情報を表します。  
+
+b1 : レンタル商品 to 貸出明細 : 0..1  
+b2 : 貸出明細 to レンタル商品 : 1  
+
+b1
+レンタル商品は資産管理番号で識別される個々の商品。  
+1件のレンタル商品は、貸出明細に関連付けられている「貸出中」もしくはどの貸出明細とも関連付けられていない「未貸出」のどちらかの状態を取る。  
+1つのレンタル商品が2つ以上の貸出明細に関連付けらる状態は、物理気に1つのレンタル商品を2人以上に貸し出している事を表すため現実的に存在しない。  
+従って、1件のレンタル商品から見た貸出明細の多重度は「0または1」になる。  
+
+あー？  
+レンタル商品は貸出中か未貸出の状態を取る。  
+ということは、貸し出されていないレンタル商品は貸出明細と紐づく事はないわけで、貸し出されている奴は絶対に紐づくので、0か1って事ってこと？  
+いや、どう考えたってそうだろう。  
+多重度って文脈とシステム上、取りうる状態を考えて答えないといけないって事だな。  
+一番難しいのはシステム上どういう状態を取るのかを想像することだ。  
+見直し中だからこそ納得できたけど、全体を把握できていない時にこれはきつい。  
+
+まず前提として、レンタル商品は多数存在する。  
+その中で各商品が貸出明細とどうやって結びつくかって事だ。  
+前提として1明細1レンタル商品である事を考えれば、Maxは1だ。でもって貸し出される奴も有ればされない奴もある。  
+ならとりあえず状態は0か1かって事。  
+それを表しているのが多重度ってわけだ。  
+
+b2  
+貸出明細から見たレンタル商品は1つしかない。  
+社員から見た会社が1つしかないのと同じ理論だからな。  
+
+結局多重度の問題も文脈から導くしかないって事だな。  
+
+■ d 不正解  
+安直に問題文だけで判断しちゃいけない。  
+ちゃんとシーケンス図を見て判断する事。それが問題の趣旨だったわけだ。  
+
+``` txt
+本文中に「貸出料金はレンタル商品の種類ごとに貸出期間によって設定される単価から計算する」とあります。
+つまり貸出料金を計算するために必要な情報は「貸出期間，単価」です。
+しかし単純にこれが答えという訳ではありません。
+必要な情報のうち、貸出期間は"貸出情報を取得する"メッセージによって担当者から"貸出処理"オブジェクトに伝達されています。
+しかし商品ごとの単価は"貸出料金"オブジェクトの情報なので、"貸出処理"オブジェクトは単価を知りません。
+このため"貸出料金を取得する"メッセージの引数は「貸出期間」のみが適切です。
+シーケンス図を見ると、メッセージは"貸出処理"オブジェクトから"商品情報"オブジェクトに送られていることがわかります。
+このメッセージを受け取った"商品情報"オブジェクトは、貸出期間と商品情報をもとに"貸出料金"オブジェクト"に貸出料金の計算を依頼し、
+返された貸出料金を"貸出処理"オブジェクトに返します。
+```
+
+■ e 正解  
+一番最後のは簡単だった。  
+と、言いたいところだが、ポリモーフィズムって結局何なの？ってのはわかっていない。  
+
+インヘリタンス
+ある親クラスの属性・機能を、その子クラスが受け継いている関係のこと。継承ともいう。
+カプセル化
+オブジェクトの独立性を高めるため、内部を隠ぺい(ブラックボックス化)すること。オブジェクトのデータとそれに対する操作をセットで定義し、外部からは特定の手続きだけの使用を許すことで実現する。情報隠ぺいともいう。
+ポリモーフィズム
+オブジェクトへの操作呼び出しが、呼び出し側でなく受け手側の特性で決まる特性。同じメッセージを送っても受け手によって行われる操作が異なる様子のこと。多態性・多相性・多様性ともいう。
+クラスAを継承したB,C,Dがあったとして、クラスAのメソッドをオーバーライドして独自の実装をします。  
+すると、各クラスのそのメソッドを呼び出すと、クラスごとに動作が違うというのがポリモーフィズムになるみたいですね。  
 
 ---
 
