10月3日会社分

--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -53,8 +53,5 @@ H31S 42
 機会
 正当化
 
-機会はわかる。できるとわかったらできるからね。
-動機は自分の欲求を敵えるため。
-プレッシャーはノルマを達成するには必要な事だった。
-正当化はそのまま、都合のいい理由をこじつける。
-
+小難しくいってるけど、要は言い換えだ。
+できるとわかったから(機会)、やりたかったから(動機)、必要だったから or ああする以外なかったんだ!!(正当化)
