--- a/Trivia/雑学.md
+++ b/Trivia/雑学.md
@@ -36,6 +36,12 @@ https://gigazine.net/news/20200807-hair-deforms-steel-blade/
 自転車で左折するとき、スピード落とせよ。  
 自転車も一時停止しないといけない乗り物なのだ。  
 
+●リンゴ酢はペットボトルに入れられるのか？  
+→  
+リンゴ酢程度なら問題ない模様。  
+というか、メーカーがペットボトルバージョンも出してるので問題ないだろう。
+黒酢とか強めやつはちょっと考えたほうがいいっぽい。  
+
 ---
 
 ## 運合系
