--- a/勉強したいことリスト.md
+++ b/勉強したいことリスト.md
@@ -84,7 +84,7 @@ ORマッパーとはなにか？
 ・memoだと何のメモだかわからないのでちゃんと名前を付ける。
 後でまとめる用のメモも作って、そうじゃない奴はちゃんと名前を付ける。
 
-・DDLまとめ
+
 ・DB制約まとめ
 ・ロックのまとめ
 
@@ -134,3 +134,4 @@ Venderだけをダウンロートする事はできるのだろうか。
 〆・エラーコードを覚える。
 →とりあえず、何かある度にまとめていく。
 直近の405はまとめたのでokにする。
+〆・DDLまとめ
