--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -52,126 +52,6 @@
 
 ---
 
-## DDLについて
-
-[わかりそうデータ定義言語 (DDL)](https://wa3.i-3-i.info/word15639.html)
-
-データ定義言語 (DDL)（英：data definition language）とは
-
-データベースに対する命令の分類のひとつ
-
-であり
-
-データを入れておく箱に対して、あれやこれやをするときに使う命令のこと
-
-です。
-
-image piyo
- 詳しく書くよ
-順番に見ていきましょう。
-まずは予備知識として「データベース」と「SQL」について簡単に説明します。
-「そんなの説明されなくても知ってるよ！」な人は、適当に読み飛ばしてください。
-
-データベースは「データを入れておく箱」です。
-突っ込んで考えると混乱するかもしれません。
-何となくのフィーリングで理解してください。
-
-データ定義言語
-
-SQLは「データベースとやり取りするときに使う言葉」です。
-
-データ定義言語2
-
-データベースにデータを入れるときは、データベースさんに対して「ちょっと、これを入れておいて」と命令します。
-反対にデータベースからデータを取り出すときは、データベースさんに対して「ちょっくら、こんなデータを取り出しておくれ」と命令します。
-SQLは、そんな命令をするときに使う言葉です。
-
-さて、このSQLを使った命令ですが、大きく分けて3つに分類できます。
-それは
-
-１．データをあれこれするときに使う命令
-２．データを入れておく箱をあれこれするときに使う命令
-３．データベースに対する権限周りをあれこれするときに使う命令
-
-の3つです。
-
-「１．データをあれこれするときに使う命令」はデータそのものに関する命令です。
-「この条件に一致するデータを探して」「このデータを入れておけ」「このデータのこの値をこっちの値に変えて」「このデータを削除して」のような命令をするときに使います。
-
-データ定義言語3
-
-「２．データを入れておく箱をあれこれするときに使う命令」はデータを入れておく箱に関する命令です。
-「このデータが入る箱を作って」「この箱をもっと大きくして」「この箱は使わないから捨てちゃって」のような命令をするときに使います。
-
-データ定義言語4
-
-「３．データベースに対する権限周りをあれこれするときに使う命令」は使ってイイ人やダメな人を指定するときに使う命令です。
-「ピヨ子さんには、この箱の中身は見せないで」「ピヨ太ママには見せていいけど、変更はさせないで」のよう命令をするときに使います。
-
-データ定義言語5
-
-以上を踏まえて、この3種類の命令のうち
-
-２．データを入れておく箱をあれこれするときに使う命令
-
-が「データ定義言語（データテイギゲンゴ）」です。
-「DDL（ディーディーエル）」と表現される場合もあります。
-
-データ定義言語6
-
-「DDL」と表現された場合は「Data Definition Language（データ・デフィニション・ランゲージ）」の略です。
-気が向いたら覚えてあげてください。
-
-データ定義言語7
-
-※「Data Definition Language」を何となく日本語にすると「データ定義言語」となります。詳細が気になる方はIT略語一覧の「DDL」をご覧ください。
-
-
-SQLで言えば
-
-・create文
-・drop文
-・alter文
-
-などがデータ定義言語に相当します。
-
-データベースに命令するときに使う言語はSQLだけではありません。
-他にもあります……多分。
-よって「データ定義言語」という用語はSQL専用ではありません。
-データを入れておく箱をあれこれするときに使う命令（で使う言語）は、すべてデータ定義言語です。
-
-とはいえ、2021年現在の状況では、データベースをあれこれする際にはSQLを使うことが多いでしょう。
-「データ定義言語はcreate文とかdrop文とかのこと」と解釈しても、そこまで困ることはないと思います。
-
-ちなみに
-
-１．データをあれこれするときに使う命令
-
-は「データ操作言語（DML）」と言います。
-
-データ定義言語8
-
-あと
-
-３．データベースに対する権限周りをあれこれするときに使う命令
-
-は「データ制御言語（DCL）」と言います。
-
-データ定義言語9
-
-気が向いたら、全部まとめて覚えてあげてください。
-
-・データ操作言語（DML）：データをあれこれ
-・データ定義言語（DDL）：箱をあれこれ
-・データ制御言語（DCL）：権限をあれこれ
-
-です。
-
-image piyo2
- 一言でまとめるよ
-まぁ「データ定義言語」って単語が出てきたら「データベースに対する『データを入れておく箱をあれこれしなさい』な命令なんだな～」と、お考えください。
-
-
 ## NULLのLIKE検索
 
 LIKE検索には引っかからない。
@@ -211,13 +91,47 @@ NULL -1 = NULL
 
 ## 雑記
 
-・午前問題を進める
+遅番で来ても何も言われない。
+報告書を見ると前田さんも迷ったみたいだ。
+課長も遅番で来てるし、もうどうにかなったのかね？
 
 
-素ってペットボトルに入れられるのかな。
-→リンゴ酢程度なら問題ない。黒酢とか強いやつはちょっと考えたほうがいいっぽい。
+・出社前に荷物の受け取り完了。ギリギリで受け取れたのでよかった。
+雨も降っていたので、車で正解だった。参考書は準備はできているので明日でもいい。
+
+・参考書取引完了
+700円ちょっと。利益になっただけましか。
+中身は抜いたし、賞味期限のあるやつだったから仕方ないね。
+
+背中が筋肉痛にならなくなってきた。
+マジで。
+昨日のレベルの筋トレやったらちょっと前まで筋肉痛になっていたはずなのに。
+まぁ、なれてきたってことだな。
+レギュラーに加えていいだろう。
 
 
+朝のうちに駐車場特定できたのもでかかった。
+昨日の夜にやったけど決められなかったからな。
+1つ1つ問題を解決していくのが面白い。
+
+
+やったああああああああああああああああああああああああああああああああああああああああああああああああ。
+ようやっとかんそくできたぞおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおおお。
+今日一番うれしいことは決定したわ！！！！！！！！！！！！！！！！！！
+
+割り勘の新しい機能の実装は新しいことが次々にわかって楽しい!!!!
+やばいなこれ。楽しすぎるんだが？
+
+
+g913買うのはいいとして、次はデスクマットがほしいかも。
+食事するときに上下させるの、面倒くさいからマットだけでマウスもキーボードも移動できるようにしたほうがいいと思った。
+
+
+・明日はスーツ
+
+
+・今日は午前問題を進める
+→
 午前問題の敷居を下げる。
 考えなくていい。
 答えを見てスクリーンショット取るだけでいい。
@@ -226,4 +140,18 @@ NULL -1 = NULL
 ポンポンやっていく。
 200問は確実に押さえないといけないから。
 もう覚える方向でいく。
+
+
+・出社前に色々(駐車場特定、荷物受け取り)
+・参考書取引完了
+・MultiBindを観測できた
+
+
+悪かった
+・
+
+よかった
+・MultiBindの値を観測することに成功した。
+・DDLをまとめることができた
+・朝のうちに色々できた(駐車場特定、荷物受け取り)
 
