--- a/BasicInformation/午前/2週目重点.md
+++ b/BasicInformation/午前/2週目重点.md
@@ -35,8 +35,12 @@ CSIRT : Computer Security Incident Response Team : シーサート
 
 
 
+**平成30年秋期　問74**
+CIOの説明はどれか。
+→
 CIOの役割  
 IはInformationなので、情報化戦略を立てる人  
+もう覚えたので緑でいいです。
 
 
 
@@ -55,3 +59,339 @@ H31S 42
 
 小難しくいってるけど、要は言い換えだ。
 できるとわかったから(機会)、やりたかったから(動機)、必要だったから or ああする以外なかったんだ!!(正当化)
+
+
+
+**平成30年秋期　問60**
+我が国の証券取引所に上場している企業において，内部統制の整備及び運用に最終的な責任を負っている者は誰か。
+→
+多分1回目に間違えたのだろうけど、今見たら経営者意外にあり得ないと思うけどなぁ。
+
+
+
+**令和元年秋期　問79**
+シュリンクラップ契約において，ソフトウェアの使用許諾契約が成立するのはどの時点か。
+→
+知らないと答えられない奴。
+覚えてしまえばすぐ終わる。
+ラップ外したら有効ですよってことなのでタイミングは開封したらです。
+
+シュリンクラップ(Shrink-wrap)とは、製品の包装のことです。
+
+
+
+**平成29年秋期　問4**
+黒い線、右か左かの奴。  
+
+条件式の組み合わせの問題でちゃんと読めば解ける奴。
+疲れてる時にやったからダメだった。  
+
+
+
+**平成30年秋期　問25**  
+液晶ディスプレイなどの表示装置において，傾いた直線を滑らかに表示する手法はどれか。
+→
+なんでこれを重要項目に置いたのか。
+まぁ、言葉のイメージ的にアンチエイリアシングしかないんですけどね。
+あ、単語覚えちゃえばいいんだ。
+・エイリアシング : 繰り返し雑音
+
+
+
+**平成31年春期　問79**  
+著作者人格権に該当するものはどれか。  
+→  
+ここら辺は覚えるしかない。
+まぁ言葉のニュアンス的に「自らの意志に反して著作物を変更、削除されない権利」がしっくり来るけどね。
+人格ってあるから、意志が関係してるように思えるし。  
+
+
+
+**平成29年春期　問75**
+会議におけるファシリテータの役割として，適切なものはどれか。
+→
+これも単語覚えたらいい。  
+
+・Facilitator:
+ファシリテータ、進行役
+中立。会議を促す。
+
+
+**平成30年春期　問44**
+SMTPのポート番号の組み合わせ。  
+
+ウェルノウンポート間違えたやつ。  
+SMTPは25番。  
+POPが110番。  
+
+
+
+**令和元年秋期　問19**
+バックアップ方式の説明のうち，増分バックアップはどれか。ここで，最初のバックアップでは，全てのファイルのバックアップを取得し，OSが管理しているファイル更新を示す情報はリセットされるものとする。
+→  
+差分がてっぺんのみ。増分がバックアップから変更がある範囲全部かと思ってたけど逆だった。
+
+増分が増えた分だけ。差分が前回のバックアップから変更があった奴全部だ。
+増分はてっぺんだけなので、バックアップの時間は少なくて済むけど、復元する時全部当てないといけないので、時間がかかる。
+因みにファイルの更新を示す情報はリセットする。出ないと次に新しいやつがわからなくなるから。  
+
+
+
+**平成27年春期　問49**
+図は，テスト項目消化件数 X において，目標値として設定したバグ累積件数に到達したことを示す。この図の状況の説明として，適切なものはどれか。  
+→  
+もう覚えた。
+普通に考えてバグの件数が増えてるんだからそのまま天元突破する。  
+
+
+**平成29年春期　問24**  
+音声などのアナログデータをディジタル化するために用いられるPCMにおいて，音の信号を一定の周期でアナログ値のまま切り出す処理はどれか。  
+→  
+あー・・・これ、地味に毎回忘れる。  
+量子化は最初じゃなかったイメージ。  
+なんか切り出したアナログデータをデジタルに変換するために閾値をあれこれ頑張る処理だった気がした。  
+残るは符号化と標本化だが、符号化は01に変換する最終作業な気がしたので、じゃあ標本化で。  
+正解だった。  
+
+
+
+**平成30年秋期　問35**
+携帯電話網で使用される通信規格の名称であり，次の三つの特徴をもつものはどれか。
+全ての通信をパケット交換方式で処理する。
+複数のアンテナを使用するMIMOと呼ばれる通信方式が利用可能である。
+国際標準化プロジェクト3GPP(3rd Generation Partnership Project)で標準化されている。
+→
+LTEしかないのだが、なぜ間違えたのか。  
+多分、ろくに確認せず音声通信？ならVoIPかなってなった気がする。  
+
+
+
+**平成29年春期　問21**  
+変形を感知するセンサを用いると，高架道路などの状態を監視してメンテナンスすることが可能である。この目的で使用されているセンサはどれか。  
+→  
+これもなぜ間違えたのか。  
+ジャイロとサーミスタは絶対ない。  
+ホール素子は知らないがなんか違う。  
+ひずみゲージという、もっともそれっぽい名前がある。実際正解だった。  
+緑でいいだろう。  
+
+
+
+**平成29年春期　問80**
+不正競争防止法において，営業秘密となる要件は，"秘密として管理されていること"，"事業活動に有用な技術上又は経営上の情報であること"ともう一つはどれか。
+→
+公然と知られていないこと。  
+覚えた。これは条件反射。  
+秘密として管理されてるんだから、公然と知られているわけがないのでは？と思ったが、
+一般的な技術なのに秘密にしてるってパターンを排除するためとかあるのかな。
+
+
+
+**平成29年春期　問20**
+分解能が8ビットのD/A変換器に，ディジタル値0を入力したときの出力電圧が0Vとなり，ディジタル値128を入力したときの出力電圧が2.5Vとなる場合，最下位の1ビットの変化による当該D/A変換器の出力電圧の変化は何Vか。
+→
+今見るとなぜ間違えたのかよくわからない。  
+多分、基礎が疎かにしてた時期だったからだろう。  
+普通に考えて、1ビットの変化何だから2.5を128で割ればいいだけだ。  
+
+
+
+**平成29年春期　問76**  
+親和図法を説明したものはどれか。  
+→
+親しい間柄→関係性の有りそうな  
+間違えたときはそんなイメージを持っていたが？  
+実際そうだった。  
+「収集した情報を相互の関連によってグループ化し、解決すべき問題点を明確にする方法である。」  
+
+これは、これだけでなく、他の図との差別化も覚えておかないといけない奴では？  
+とりあえずややこしい奴だけまとめておくか。  
+
+複雑な要因の絡み合う事象について，その事象間の因果関係を明らかにする方法である。
+連関図法の説明です。
+
+目的・目標を達成するための手段・方策を順次展開し，最適な手段・方策を追求していく方法である。
+系統図法の説明です。
+
+各々の図は目的が違うのか。
+関連図は因果関係を明らかにする事。因果関係はそれぞれの関連で成り立っているから。  
+最適な手段を探すのは系統図。何かを達成するために順序だてて考えていくからかな。  
+
+
+
+**平成28年秋期　問57**  
+ITILでは，可用性管理における重要業績評価指標(KPI)の例として，保守性を表す指標値の短縮を挙げている。この指標に該当するものはどれか。
+→
+なぜ間違えたのか。  
+保守性→早くメンテ終わる。→平均サービス回復時間。
+
+
+
+**平成29年春期　問79**  
+著作権法によるソフトウェアの保護範囲に関する記述のうち，適切なものはどれか。  
+→
+ナチュラルにまた間違えた。  
+アルゴリズムに人権はないんだったよな。  
+プログラム言語にも人権はなかった。  
+作ったプログラムとかソースコードには人権があるんだっけか。  
+まぁ、派遣で作らせて特に何も決めて無ければ派遣企業が著作権持つって話だった気もするし、ソースコードは作った奴が勝ちってところかな。  
+
+
+
+**平成27年秋期　問59**  
+ソースコードのバージョン管理システムが導入された場合に，システム監査において，ソースコードの機密性のチェックポイントとして追加することが適切なものはどれか。  
+→  
+多分完全性の奴と間違えた。  
+今見たらなんで間違えたのかわからない。緑だな。  
+
+バージョン管理システムに登録したソースコードの変更結果を責任者が承認していること
+完全性のチェックポイントです。
+
+バージョン管理システムのアクセスコントロールの設定が適切であること
+正しい。機密性のチェックポイントです。
+機密性とは、情報セキュリティマネジメントの概念の一要素で、許可された正規のユーザだけが情報にアクセスできる特性を示します。
+
+
+
+**平成31年春期　問53**
+アローダイアグラムの日程計画をもつプロジェクトの，開始から終了までの最少所要日数は何日か。
+→
+最小所要ってことは、クリティカルパスって事だ。緑。  
+クリティカルパスはどんなに頑張ってもこれくらいかかるって時間の事だ。最も長い時間。  
+他の経路が短く済んでも、その経路は最も長いので、全体としてそれ位時間がかかってしまう経路の事。  
+
+
+
+**平成31年春期　問41**  
+JIS Q 27000:2014(情報セキュリティマネジメントシステム－用語)における"リスクレベル"の定義はどれか。  
+→  
+ニュアンスが微妙で間違えた問題だ。  
+「リスク」の「レベル」なので重大度程度でよかった問題。  
+「結果とその発生のし易さの組み合わせとして表現される、リスクの大きさ」  
+
+間違えたとしたらこれだな。  
+「リスクの重大性を評価するために目安とする条件」  
+まぁ、レベルともとらえれなくもないからな。  
+
+
+
+**令和元年秋期　問1**
+次の流れ図は，10進整数 j(0＜j＜100) を8桁の2進数に変換する処理を表している。2進数は下位桁から順に，配列の要素 NISHIN(1) から NISHIN(8) に格納される。流れ図のa及びbに入る処理はどれか。ここで，j div 2 はjを2で割った商の整数部分を，j mod 2 はjを2で割った余りを表す。
+→
+あまりを計算する。  
+次の値は割った後の値。  
+この順で考えればいい。  
+
+
+
+**平成29年春期　問30**
+本社と工場との間を専用線で接続してデータを伝送するシステムがある。このシステムでは2,000バイト／件の伝票データを2件ずつまとめ，それに400バイトのヘッダ情報を付加して送っている。伝票データは，1時間に平均100,000件発生している。回線速度を1Mビット／秒としたとき，回線利用率はおよそ何%か。
+→  
+回線利用率の問題は時間が重要。  
+1時間と指定が有れば、その1時間をフルに使った時の送信量と実際の使用量を割ればよろしい。  
+
+3600Mビット
+
+2000バイト*2+400バイト * 50,000
+4,400バイト * 5*10^4 
+= 44バイト * 5+10^6
+= 44 * 8 ビット / 3600
+= 1760 / 3600
+= 0.488888 ≒ 0.49
+
+
+
+**平成29年春期　問13**  
+ベンチマークテストの説明として，適切なものはどれか。  
+→  
+これもなんで間違えたんだっけ。  
+小難しく考えてるけど、一番しっくり来るのはグラボの奴って納得した気がする。
+ベンチマークテストプログラム実行して最後にスコアを表示するアレ。
+
+ベンチマークテストは、システムの使用目的に合わせたプログラム、あるいは評価対象の業務の典型的な処理プログラムを用いて、入出力や制御プログラムを含めたシステムの総合的な処理性能を測定する性能評価手法です。
+
+代表的なベンチマークにSPEC，TPCなどがあります。
+SPEC
+プロセッサの性能を評価するベントマークテストで、整数演算の性能を評価するSPECint、浮動小数点演算能力を評価するSPECfpがある。
+TPC
+オンライントランザクション処理システムの性能を評価するベンチマークテスト
+
+
+
+**平成29年秋期　問8**  
+Perlの実行に関する記述のうち，適切なものはどれか。  
+→  
+これは純粋に知らなかった奴だ。  
+そうそう。前もWebサーバーで動作してCGI用の言語で間違えた。  
+正解はインタプリタ型なので事前にコンパイルした事前ファイルが必要ないってのが答えだ。  
+
+
+
+**平成30年秋期　問50**  
+XP(Extreme Programming)のプラクティスの説明のうち，適切なものはどれか。  
+→  
+アジャイルはなぁ。  
+多分テストケースを作成で間違えたはず。  
+取り合えずコード書いたらすぐにテストできることはいいことなので、そういうの選べたいいって感じかなー。  
+
+コードの結合とテストを継続的に繰り返す。
+正しい。XPでは、システムのビルドとテストの実行を自動化し継続的に行います。これを継続的インテグレーションといいます。
+
+コードを作成して結合できることを確認した後，テストケースを作成する。
+XPでは、プロダクトコードと並行してテストコードを書き、小まめに実行して結果を見ながら開発するというテストファーストで進めます。これをテスト駆動開発(TDD)といいます。
+
+
+
+**令和元年秋期　問61**  
+情報化投資において，リスクや投資価値の類似性でカテゴリ分けし，最適な資源配分を行う際に用いる手法はどれか。  
+→  
+資源配分はポートフォリオなので、ITポートフォリオです。  
+これは多分、一番最初に基本の勉強し始めて、忘れてたから間違えただけな気がする。  
+
+
+
+**平成30年秋期　問55**  
+キャパシティ管理における将来のコンポーネント，並びにサービスの容量・能力及びパフォーマンスを予想する活動のうち，傾向分析はどれか。  
+→  
+これも深読みして間違えた気がする。  
+日本語から予測できる問題だから多分やっても意味ない気がするなぁ。  
+将来の傾向分析何だから、現在の状況を把握して予測するしかないよね。  
+
+
+
+**平成27年春期　問52**  
+プロジェクトに関わるステークホルダの説明のうち，適切なものはどれか。  
+→  
+利害関係。  
+おいしい人とおいしくない人がいる。  
+英語の役がそのまんまだ。
+
+・stakeholder : 利害関係者
+
+
+
+**平成26年秋期　問28**
+関係を第3正規形まで正規化して設計する目的はどれか。
+→
+基礎を確認するってのはこういう事だぞ。  
+明日データベースを復習だ。  
+
+値の重複をなくすことによって，格納効率を向上させる。
+関係を細かく分解することによって，整合性制約を排除する。
+冗長性を排除することによって，更新時異状を回避する。
+属性間の結合度を低下させることによって，更新時のロック待ちを減らす。
+分類
+テクノロジ系 » データベース » データベース設計
+
+正解
+ウ
+解説
+値の重複をなくすことによって，格納効率を向上させる。
+重複の排除は第1正規化で実施されます。
+関係を細かく分解することによって，整合性制約を排除する。
+表が多くなるほどに整合性制約の数は増していきます。
+冗長性を排除することによって，更新時異状を回避する。
+正しい。正規化の目的は冗長性の排除することで更新時異状を回避し、データベースの一貫性を確保することです。
+属性間の結合度を低下させることによって，更新時のロック待ちを減らす。
+正規化はパフォーマンス向上のために行うわけではありません。
+正規化を行うと表が幾つかに分割され、更新時にはこれらの表の結合が行われます。表が分割されるほどに結合処理も増加するのでロック待ちの減少には繋がりません。
