10月4日会社分

--- a/後でまとめる.md
+++ b/後でまとめる.md
@@ -1,60 +1,9 @@
 # 後でまとめたいやつら
 
-## 予約枠のいつぞやのやつ
-
-バインドがあいまいだった時の話で、もはやこれだけあっても意味がない気がする。  
-
-``` XML
-<ControlTemplate.Triggers>
-    <!--<DataTrigger Binding="{Binding Text, ElementName=DayOfWeek}" Value="土">
-        <Setter Property="Foreground" Value="blue" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding Text, ElementName=DayOfWeek}" Value="日">
-        <Setter Property="Foreground" Value="red" />
-    </DataTrigger>-->
-    <DataTrigger Binding="{Binding DayOfWeek}" Value="Saturday">
-        <Setter TargetName="DayOfWeek" Property="Foreground" Value="blue" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding DayOfWeek}" Value="Sunday">
-        <Setter TargetName="DayOfWeek" Property="Foreground" Value="red" />
-    </DataTrigger>
-</ControlTemplate.Triggers>
-
-<ControlTemplate.Triggers>
-    <!--<DataTrigger Binding="{Binding Empty}" Value="True">
-        <Setter Property="Visibility" Value="Hidden" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding Text, ElementName=Day}" Value="土">
-        <Setter Property="Foreground" Value="blue" />
-        <Setter TargetName="Border" Property="BorderThickness" Value="1,0,1,1" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding Text, ElementName=Day}" Value="日">
-        <Setter Property="Foreground" Value="red" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding IsSelected}" Value="True">
-        <Setter TargetName="Base" Property="Background" Value="{StaticResource MahApps.Brushes.Accent4}" />
-    </DataTrigger>-->
-    <DataTrigger Binding="{Binding Empty}" Value="True">
-        <Setter TargetName="Count" Property="Visibility" Value="Hidden" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding DayOfWeek}" Value="Saturday">
-        <Setter TargetName="Day" Property="Foreground" Value="blue" />
-        <Setter TargetName="Border" Property="BorderThickness" Value="1,0,1,1" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding DayOfWeek}" Value="Sunday">
-        <Setter TargetName="Day" Property="Foreground" Value="red" />
-    </DataTrigger>
-    <DataTrigger Binding="{Binding IsSelected}" Value="True">
-        <Setter TargetName="Base" Property="Background" Value="{StaticResource MahApps.Brushes.Accent4}" />
-    </DataTrigger>
-</ControlTemplate.Triggers>
-```
-
----
-
 ## NULLのLIKE検索
 
-LIKE検索には引っかからない。
+LIKE検索には引っかからない。  
+NULLを検索したかったからISNULLを使うこと。  
 
 ## NULLのORDERBY
 
@@ -66,7 +15,8 @@ Oracleは最大値扱いだが、SQLServerは最小値扱い見たい。
 ## COUNT(*)の意味とNULLのCOUNT
 
 [COUNT(*)　が何を意味しているのかわからない](https://ja.stackoverflow.com/questions/42915/count-%E3%81%8C%E4%BD%95%E3%82%92%E6%84%8F%E5%91%B3%E3%81%97%E3%81%A6%E3%81%84%E3%82%8B%E3%81%AE%E3%81%8B%E3%82%8F%E3%81%8B%E3%82%89%E3%81%AA%E3%81%84)  
-COUNT(*)は行数を数えてくれる。  
+→  
+**COUNT(*)は行数を数えてくれる**  
 
 ``` txt
 OracleではCOUNT(*)とCOUNT(age)の結果は異なります。
@@ -87,6 +37,39 @@ NULL -1 = NULL
 
 ## 名前付き引数 C#7.0
 
+## LinqのCast
+
+[【LINQ】Cast<T>は使わない方が良い？OfType<T>を使おう](https://threeshark3.com/castistrap/)  
+
+Castって失敗した時の挙動ってどうなのか知らなかったので調べた。  
+失敗すると例外を吐く模様  
+CastではなくOfTypeを使えばいいみたい。  
+CastはFirstと同じく罠。  
+
 ---
 
 ## 雑記
+
+
+・参考書の代金が支払われない。
+→
+運営からもお知らせが来た。
+明日まで待つ旨を説明し、最後通告をするか。
+→
+返信があった。事情により中々支払いができないということだった。
+今日中には支払われるとのことなので待つことにしよう。
+いやがらせでなければなんでもいい。
+別に急いでいるわけでもないので、確実に支払ってくれるなら文句はない。
+
+・出社前にやってみたが結構間違える。思考の癖が同じ。
+・てか、午前問題ってこんな感じだったっけか？
+意外と覚えているので、どんどんやっていこう。
+
+・ストロングイェーガー聞きたい。
+
+
+人はおおむね自分で思うほどには幸福でも不幸でもない。肝心なのは望んだり生きたりすることに飽きないことだ。
+
+
+数こなすよりも300問を完璧に覚えたほうがよくないだろうか。
+
